--- a/web/src/components/PageHeader/styles.css
+++ b/web/src/components/PageHeader/styles.css
@@ -55,7 +55,7 @@
     }
 
     .page-header .header-content {
-        flex: content;
+        flex: auto;
         max-width: 740px;
         margin: 0 auto;
         padding-bottom: 48px;
